--- a/core/interaction-api/pom.xml
+++ b/core/interaction-api/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>spring-cloud-openfeign-core</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
