--- a/infra/gateway-server/src/main/resources/application.yaml
+++ b/infra/gateway-server/src/main/resources/application.yaml
@@ -49,19 +49,15 @@ spring:
         - id: request-service-private-api
           uri: lb://REQUEST-SERVICE
           predicates:
-            - Path=/users/{userId}/requests
-            - Method=GET,POST
-          filters:
-            - SetPath=/users/{userId}/requests
+            - Path=/users/{userId}/requests/**
 
         # 7. Private Event Requests API - /users/{userId}/events/{eventId}/requests
         - id: event-request-service-private-api
           uri: lb://REQUEST-SERVICE
           predicates:
-            - Path=/users/{userId}/events/{eventId}/requests
-            - Method=GET,PATCH
+            - Path=/users/{userId}/events/{eventId}/requests/**
           filters:
-            - SetPath=/users/{userId}/events/{eventId}/requests
+            - SetPath=/users/{userId}/events/{eventId}/requests/{remaining}
 
         # 8. Private Comments API - /users/{userId}/comments
         - id: comment-service-private-api
@@ -99,19 +95,17 @@ spring:
           predicates:
             - Path=/admin/requests/**
 
-        # 14. Direct user API - /users/{userId}
-        - id: user-service-direct-api
-          uri: lb://USER-SERVICE
-          predicates:
-            - Path=/users/{userId}
-            - Method=GET
-
-        # 15. Public Users API - /users
+        # 14. Public Users API - /users
         - id: user-service-public-api
           uri: lb://USER-SERVICE
           predicates:
             - Path=/users/**
-            - Method=GET
+
+        # 15. Direct user API - /users/{userId}
+        - id: user-service-direct-api
+          uri: lb://USER-SERVICE
+          predicates:
+            - Path=/users/{userId}
 
 eureka:
   client:
