--- a/core/event-service/src/main/resources/application.yaml
+++ b/core/event-service/src/main/resources/application.yaml
@@ -15,9 +15,9 @@ spring:
   # PostgreSQL Configuration
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/event_service_db
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://localhost:5432/ewm_main_db
+    username: ewm_user
+    password: ewm_password
 
     hikari:
       connection-timeout: 30000
@@ -27,7 +27,7 @@ spring:
   # JPA Configuration
   jpa:
     hibernate:
-      ddl-auto: validate  # или none
+      ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
