fix: исправление замечаний
• Разделение общей БД на отдельные для каждого сервиса
• Увеличение ограничений полей в stats-server (IPv6, длинные URI)
• Вынос Feign вызовов из транзакций в comment-service
• Удаление стек-трейсов из ответов и закомментированного кода

--- a/core/event-service/src/main/resources/application.yaml
+++ b/core/event-service/src/main/resources/application.yaml
@@ -15,7 +15,7 @@ spring:
   # PostgreSQL Configuration
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/ewm_main_db
+    url: jdbc:postgresql://localhost:5434/ewm_event_db
     username: ewm_user
     password: ewm_password
 
